background,style added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta chatset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>sample-project</title>
-    </head>
-    <body>
-        hello aswin
-        </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tutorial Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>Tutorial Website</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Tutorials</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Welcome to our Tutorial Website!</h2>
+            <p>Here you'll find a variety of tutorials on different topics.</p>
+        </section>
+
+        <section>
+            <h2>Latest Tutorials</h2>
+            <div class="tutorial-list">
+                <div class="tutorial">
+                    <h3>HTML Basics</h3>
+                    <p>Learn the basics of HTML.</p>
+                </div>
+                <div class="tutorial">
+                    <h3>CSS Styling</h3>
+                    <p>Discover how to style your web pages with CSS.</p>
+                </div>
+                <div class="tutorial">
+                    <h3>JavaScript Fundamentals</h3>
+                    <p>Get started with JavaScript programming.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Tutorial Website. All rights reserved.</p>
+    </footer>
+</body>
 </html>
