added more tutorials

--- a/index.html
+++ b/index.html
@@ -41,6 +41,22 @@
                     <h3>JavaScript Fundamentals</h3>
                     <p>Get started with JavaScript programming.</p>
                 </div>
+                <div class="tutorial">
+                    <h3>Python Fundamentals</h3>
+                    <p>Get started with python programming.</p>
+                </div>
+                <div class="tutorial">
+                    <h3>C basics</h3>
+                    <p>Get started with C programming.</p>
+                </div>
+                <div class="tutorial">
+                    <h3>Java</h3>
+                    <p>Get started with Java programming.</p>
+                </div>
+                <div class="tutorial">
+                    <h3>C++</h3>
+                    <p>Get started with C++ programming.</p>
+                </div>
             </div>
         </section>
     </main>
